# data_contracts

./: main.py  pyproject.toml
.github/workflows/: contract-ci.yml
data_contracts/demo_item/v1/: schema.json
