[project]
name = "data_contracts"
version = "1.0.0"
description = "Data contract for ingestion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jsonschema"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[[tool.uv.index]]
name = "github"
url = "https://pypi.pkg.github.com/AnhDungPham2901/"
publish-url = "https://pypi.pkg.github.com/AnhDungPham2901/"